# automatize-me

./: .coverage  .gitignore  mkdocs.yml  pyproject.toml  scrapnote  scrapnote.txt
automatize_me/: cli.py  ler_xlsx.py
automatize_me/application/: cli.py
automatize_me/infrastructure/: gerenciamento_arquivo.py  variaveis.py
automatize_me/insfrastructure/: arquivo.py
automatize_me/service/: gerenciamento_planilha.py
docs/: index.md
docs/api/: ler_xlsx.md
tests/resources/arquivos-teste/: arquivo.xlsx
