[tool.poetry]
name = "automatize-me"
version = "0.1.0"
description = ""
authors = ["Rodrigo Gonçalves <ro.go.calves@gmail.com>"]
readme = "README.md"
packages = [{include = "automatize_me"}]

[tool.poetry.scripts]
automatize-me = "automatize_me.application.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.13"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.8.0"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "." 
addopts = "--doctest-modules"

[tool.isort]
profile = "black" 
line_length =  79 

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"

